--- a/index.html
+++ b/index.html
@@ -12,6 +12,50 @@
     <div class="container">
       <h1>Feed Him</h1>
       <h3>test 3</h3>
+      <div class="">
+        <label for="createAnimal">Enter animal name</label>
+        <input type="text" name="" value="">
+        <button type="button" name="button">Create Animal</button>
+
+      </div>
+      <div class="from-group">
+        <select id="feed" name="">
+          <option value="eatSmall">Eat Small</option>
+          <option value="eatMedium">Eat Medium</option>
+          <option value="eatLarge">Eat Large</option>
+          <option value="eatPoop">Eat Pooop</option>
+          <option value="eatPowerUp">Eat Power Up</option>
+          <option value="eatSpecialBonus">Eat Bonus</option>
+          <option value="eatWeirdThing">Eat Weird Thing</option>
+        </select>
+        <button type="button" name="button">Eat</button>
+      </div>
+      <div class="from-group">
+        <select id="sleep" name="">
+          <option value="sleepSmall">Sleep Small</option>
+          <option value="sleepSpecialBonus">Sleep Bonus</option>
+        </select>
+        <button type="button" name="button">Sleep</button>
+      </div>
+      <div class="from-group">
+        <select id="play" name="">
+          <option value="playSmall">Play Small</option>
+          <option value="playMedium">Play Medium</option>
+          <option value="playLarge">Play Large</option>
+          <option value="playSpecialBonus">Play Bonus</option>
+        </select>
+        <button type="button" name="button">Play</button>
+
+      </div>
+      <div class="from-group">
+        <button type="button" name="button">Poop</button>
+
+      </div>
+      <div class="">
+        <h2 id="getHealthLevel"></h2>
+        <button type="button" name="button">Get Health Level</button>
+
+      </div>
 
     </div>
 
